--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -53,6 +53,7 @@ html(lang="es" class="light")
           +navLink('/admision', '📋', 'Admisión', 'text-blue-500 dark:text-rose-400')
           +navLink('/clinica/dashboard', '🩺', 'Tablero Clínico', 'text-indigo-500 dark:text-purple-400')
           +navLink('/habitaciones', '🛏️', 'Mapa de Camas', 'text-teal-500 dark:text-teal-400')
+          +navLink('/mesa-entrada', '🛎️', 'Mesa de Entrada', 'text-indigo-500 dark:text-indigo-400')
           
           if usuario.rol === 'Admin'
              div(class="border-t border-slate-200 dark:border-slate-700 my-4")
